--- a/index.html
+++ b/index.html
@@ -8,132 +8,149 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <form action="http://dev.cotenfrontend.pl" method="post" class="form">
-      <p>
-        <label for="name">First name:</label>
-        <input type="text" id="name" name="name" />
-      </p>
-      <p>
-        <label for="username">Surname: <abbr title="required">*</abbr></label>
-        <input id="username" type="text" name="username" />
-      </p>
-      <p>
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" />
-      </p>
-
-      <p>
-        <label for="password">Password (8 characters minimum):</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          minlength="8"
-          pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
-          required
-        />
-      </p>
-      <p>
-        <label for="date">Birthdate:</label>
-        <input type="date" name="date" id="date" />
-      </p>
-
-      <p>
-        <label for="phone">Enter your phone number:</label>
-
-        <input
-          type="tel"
-          id="phone"
-          name="phone"
-          pattern="[0-9]{3}[0-9]{3}[0-9]{3}"
-          required
-        />
-      </p>
-      <p>
-        <label for="url">Enter your GitHub URL:</label>
-
-        <input
-          type="url"
-          name="url"
-          id="url"
-          placeholder="https://username.github.io/reponame"
-          pattern="https://.*"
-          size="30"
-          required
-        />
-      </p>
-      <p>
-        <label for="avatar">Choose a profile picture:</label>
-
-        <input
-          type="file"
-          id="avatar"
-          name="avatar"
-          accept="image/png, image/jpeg"
-        />
-      </p>
-      <p>
-        <input
-          type="range"
-          id="range_number"
-          name="range_number"
-          min="0"
-          max="10"
-          value="7"
-        />
-        <label for="range_number">What is your favorite number</label>
-      </p>
-
-      <p>
-        <label for="color">Pick a color:</label>
-        <input type="color" name="color" id="color" />
-      </p>
-      <p>
-        <label for="message">Tell me your story</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-      </p>
-
-      <p>
-        <label for="like_1">I like movies</label>
-        <input type="checkbox" id="like_1" name="like_movie" value="1" />
-      </p>
-      <p>
-        <label for="like_2">I like books</label>
-        <input type="checkbox" id="like_2" name="like_book" value="2" />
-      </p>
-      <fieldset>
-        <legend>Top movies</legend>
+    <main calss="main">
+      <header class="header">
+        <h1 class="header__title">wtf-form</h1>
+      </header>
+      <form action="http://dev.cotenfrontend.pl" method="post" class="form">
         <p>
-          <input type="radio" name="movie" id="movie_1" value="Black Panther" />
-          <label for="movie_1">Black Panther(2018)</label>
+          <label for="name">First name:</label>
+          <input type="text" id="name" name="name" />
         </p>
+
         <p>
-          <input type="radio" name="movie" id="movie_2" value="Lady Bird" />
-          <label for="movie_2">Lady Bird(2017)</label>
+          <label for="username">Surname: <abbr title="required">*</abbr></label>
+          <input id="username" type="text" name="username" />
         </p>
+
         <p>
+          <label for="email">Email:</label>
+          <input type="email" name="email" id="email" />
+        </p>
+
+        <p>
+          <label for="password">Password (8 characters minimum):</label>
           <input
-            type="radio"
-            name="movie"
-            id="movie_3"
-            value="The Wizard of OZ"
+            type="password"
+            id="password"
+            name="password"
+            minlength="8"
+            pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+            required
           />
-          <label for="movie_3">The Wizard of OZ(1939)</label>
         </p>
-      </fieldset>
-      <p>
-        <label for="visit">Number of cinema visits (1-100)</label>
-        <input type="number" name="visit" id="visit" min="1" max="100" />
-      </p>
 
-      <p>
-        <label for="riddle">WTF: bonus:</label>
-        <input type="text" id="riddle" name="riddle" />
-      </p>
+        <p>
+          <label for="date">Birthdate:</label>
+          <input type="date" name="date" id="date" />
+        </p>
 
-      <p>
-        <input type="submit" value="Send Request" />
-      </p>
-    </form>
+        <p>
+          <label for="phone">Enter your phone number:</label>
+          <input
+            type="tel"
+            id="phone"
+            name="phone"
+            pattern="[0-9]{3}[0-9]{3}[0-9]{3}"
+            required
+          />
+        </p>
+
+        <p>
+          <label for="url">Enter your GitHub URL:</label>
+          <input
+            type="url"
+            name="url"
+            id="url"
+            placeholder="https://username.github.io/reponame"
+            pattern="https://.*"
+            size="30"
+            required
+          />
+        </p>
+
+        <p>
+          <label for="avatar">Choose a profile picture:</label>
+          <input
+            type="file"
+            id="avatar"
+            name="avatar"
+            accept="image/png, image/jpeg"
+          />
+        </p>
+
+        <p>
+          <label for="range_number">What is your favorite number</label>
+          <input
+            type="range"
+            id="range_number"
+            name="range_number"
+            min="0"
+            max="10"
+            value="7"
+          />
+        </p>
+
+        <p>
+          <label for="color">Pick a color:</label>
+          <input type="color" name="color" id="color" />
+        </p>
+
+        <p>
+          <label for="message">Tell me your story</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </p>
+
+        <p>
+          <label for="like_1">I like movies</label>
+          <input type="checkbox" id="like_1" name="like_movie" value="1" />
+        </p>
+
+        <p>
+          <label for="like_2">I like books</label>
+          <input type="checkbox" id="like_2" name="like_book" value="2" />
+        </p>
+
+        <fieldset>
+          <legend>Top movies</legend>
+          <p>
+            <input
+              type="radio"
+              name="movie"
+              id="movie_1"
+              value="Black Panther"
+            />
+            <label for="movie_1">Black Panther(2018)</label>
+          </p>
+          <p>
+            <input type="radio" name="movie" id="movie_2" value="Lady Bird" />
+            <label for="movie_2">Lady Bird(2017)</label>
+          </p>
+          <p>
+            <input
+              type="radio"
+              name="movie"
+              id="movie_3"
+              value="The Wizard of OZ"
+            />
+            <label for="movie_3">The Wizard of OZ(1939)</label>
+          </p>
+        </fieldset>
+
+        <p>
+          <label for="visit">Number of cinema visits (1-100)</label>
+          <input type="number" name="visit" id="visit" min="1" max="100" />
+        </p>
+
+        <p>
+          <label for="riddle">WTF: bonus:</label>
+          <input type="text" id="riddle" name="riddle" />
+        </p>
+
+        <p>
+          <input type="submit" value="Send Request" />
+        </p>
+      </form>
+    </main>
   </body>
 </html>
