--- a/index.html
+++ b/index.html
@@ -8,28 +8,41 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <main calss="main">
+    <main class="main">
       <header class="header">
         <h1 class="header__title">wtf-form</h1>
       </header>
       <form action="http://dev.cotenfrontend.pl" method="post" class="form">
         <p class="form__fields">
-          <label for="name">First name:</label>
-          <input type="text" id="name" name="name" />
+          <label for="name" class="form__label">First name:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="taki tam placeholder"
+            class="form__input"
+          />
         </p>
 
         <p class="form__fields">
-          <label for="username">Surname: <abbr title="required">*</abbr></label>
-          <input id="username" type="text" name="username" />
+          <label for="username" class="form__label"
+            >Surname: <abbr title="required">*</abbr></label
+          >
+          <input
+            id="username"
+            type="text"
+            name="username"
+            class="form__input"
+          />
         </p>
 
         <p class="form__fields">
-          <label for="email">Email:</label>
-          <input type="email" name="email" id="email" />
+          <label for="email" class="form__label">Email:</label>
+          <input type="email" name="email" id="email" class="form__input" />
         </p>
 
         <p class="form__fields">
-          <label for="password">Password (8 characters minimum):</label>
+          <label for="password" class="form__label">Password:</label>
           <input
             type="password"
             id="password"
@@ -37,27 +50,31 @@
             minlength="8"
             pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
             required
+            class="form__input"
           />
         </p>
 
         <p class="form__fields">
-          <label for="date">Birthdate:</label>
-          <input type="date" name="date" id="date" />
+          <label for="date" class="form__label">Birthdate:</label>
+          <input type="date" name="date" id="date" class="form__input" />
         </p>
 
         <p class="form__fields">
-          <label for="phone">Enter your phone number:</label>
+          <label for="phone" class="form__label"
+            >Enter your phone number:</label
+          >
           <input
             type="tel"
             id="phone"
             name="phone"
             pattern="[0-9]{3}[0-9]{3}[0-9]{3}"
             required
+            class="form__input"
           />
         </p>
 
         <p class="form__fields">
-          <label for="url">Enter your GitHub URL:</label>
+          <label for="url" class="form__label">Enter your GitHub URL:</label>
           <input
             type="url"
             name="url"
@@ -66,6 +83,7 @@
             pattern="https://.*"
             size="30"
             required
+            class="form__input"
           />
         </p>
 
@@ -80,7 +98,9 @@
         </p>
 
         <p class="form__fields">
-          <label for="range_number">What is your favorite number</label>
+          <label for="range_number" class="form__label"
+            >What is your favorite number</label
+          >
           <input
             type="range"
             id="range_number"
@@ -88,6 +108,7 @@
             min="0"
             max="10"
             value="7"
+            class="form__input form__input--range"
           />
         </p>
 
@@ -97,8 +118,13 @@
         </p>
 
         <p class="form__fields">
-          <label for="message">Tell me your story</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <label for="message" class="form__label">Tell me your story</label>
+          <textarea
+            name="message"
+            id="message"
+            rows="10"
+            class="form__input form__input--textarea"
+          ></textarea>
         </p>
 
         <p class="form__fields form__fields--inline">
@@ -107,8 +133,11 @@
             id="like_movie"
             name="like_movie"
             value="movies"
+            class="form__checkbox"
           />
-          <label for="like_movie">I like movies</label>
+          <label for="like_movie" class="form__checkbox-label"
+            >I like movies</label
+          >
         </p>
 
         <p class="form__fields form__fields--inline">
@@ -117,8 +146,11 @@
             id="like_book"
             name="like_book"
             value="books"
+            class="form__checkbox"
           />
-          <label for="like_book">I like books</label>
+          <label for="like_book" class="form__checkbox-label"
+            >I like books</label
+          >
         </p>
 
         <fieldset>
@@ -148,17 +180,26 @@
         </fieldset>
 
         <p class="form__fields">
-          <label for="visit">Number of cinema visits (1-100)</label>
-          <input type="number" name="visit" id="visit" min="1" max="100" />
+          <label for="visit" class="form__label"
+            >Number of cinema visits (1-100)</label
+          >
+          <input
+            type="number"
+            name="visit"
+            id="visit"
+            min="1"
+            max="100"
+            class="form__input"
+          />
         </p>
 
         <p class="form__fields">
-          <label for="riddle">WTF: bonus:</label>
-          <input type="text" id="riddle" name="riddle" />
+          <label for="riddle" class="form__label">WTF: bonus:</label>
+          <input type="text" id="riddle" name="riddle" class="form__input" />
         </p>
 
         <p class="form__fields">
-          <input type="submit" value="Send Request" />
+          <input type="submit" value="Send Request" class="form__button" />
         </p>
       </form>
     </main>
